# quant_analysis

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  factors.py  graph.py  history_tracker.py  pattern_summary.py  run.py  sector_analyzer.py  state.py  tracker.py
docs/: LLM分析模块_集成设计文档_20260616_174419.md  implementation_plan_20260614_1501.md  optimization_plan_20260614.md  session_handoff_20260614.md  session_handoff_20260614_1707.md  session_handoff_20260614_2230.md  session_handoff_20260614_2300.md  优化路线图_因子选股与回测引擎_20260617_140534.md  复现与运维手册_20260706_1615.md  实时盯盘系统_复盘梳理_20260627_220126.md  对标吴川_方法借鉴与提质方案_20260618_175554.md  报告优化方案_20260615_170707.md  资金口径修复与因子归因_20260707_0257.md  选股报告融合设计文档_20260616_231940.md  选股池_设计文档_20260616_215743.md  项目全景与架构_20260706_1615.md  项目架构全景文档_20260617_140534.md
scripts/: backtest_accum_score.py  deploy_server.sh  run_daily.sh  run_mid.sh  run_pre.sh
tests/: test_activity_rank.py  test_analysts.py  test_backtest_history.py  test_board_breadth.py  test_bull_hunter.py  test_chat_agent.py  test_chat_inflight.py  test_cognition_log.py  test_company_profile.py  test_concept_filter.py  test_core_new_factors.py  test_decay_ratio.py  test_fullpush_parser.py  test_fund_triangle.py  test_fundamentals.py  test_history_scout.py  test_hold_decision.py  test_hot_rank_log.py  test_hot_reversal.py  test_industry_insight.py  test_industry_persist.py  test_key_levels.py  test_lhb_inst.py  test_lhb_review.py  test_lhb_seats.py  test_llm_brief.py  test_ma_signals.py  test_market_alert.py  test_market_hub.py  (+44 more)
(+176 files in other folders)
