[project]
name = "astock-agent"
version = "0.1.0"
description = "A股多Agent盘后选股与简报系统"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "akshare>=1.14.0",
    "tushare>=1.4.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "tenacity>=8.0.0",
    "apscheduler>=3.10.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.scripts]
astock = "app.run:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
